--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html data-theme="light" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/toy-shop.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>kiddy-toy-store</title>
   </head>
